--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Object files
 *.o
 
-# Dependencies
-*.mk
-
 # Libraries
 *.lib
 *.a
@@ -18,3 +15,10 @@
 *.exe
 *.out
 *.app
+
+# Dependencies
+*.mk
+
+# Compile Folder files
+kern/compile/*
+
